--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ header{
     margin:auto;
     margin-top: 10px;
 }
+#signature2{
+    margin: auto;
+    display: none;
+}
 
 #text1{
     margin-top:-175px;
@@ -47,11 +51,6 @@ header{
 #autoportrait{
     border-radius:15px ;
     align-items: center;
-}
-#autoportrait2{
-    border-radius:10px ;
-    align-items: center;
-    display: none;
 }
 
 p,h1,h2,h3,ul{
@@ -241,11 +240,8 @@ p,ul{
     }
     #autoportrait{
         margin: auto;
-        display: none;
-    }
-    #autoportrait2{
-        margin: auto;
-        display: block;
+        width: 240px;
+        height: 280px;
     }
 
     hr{
@@ -276,6 +272,10 @@ p,ul{
         flex-direction: column;
         margin: auto;
     }
+    #signature{
+        width: 182px;
+        height: 150px;
+    }
     #text1{
         margin-top: 0px;
     }
@@ -284,13 +284,11 @@ p,ul{
     }
     #autoportrait{
         margin: auto;
-        display: none;
-    }
-    #autoportrait2{
-        margin: auto;
-        display: block;
+        width: 240px;
+        height: 280px;
     }
 
+    
     hr{
         margin-left: 0%;
         margin-right: 0%;
@@ -314,11 +312,16 @@ p,ul{
 @media screen and (max-width: 390px) {
     header{
         width:240px;
-        height:660px;
+        height:620px;
         display: flex;
         flex-direction: column;
         margin: auto;
     }
+    #signature{
+        width:182px;
+        height: 150px;
+    }
+
     #text1{
         margin-top: 0px;
     }
@@ -327,13 +330,10 @@ p,ul{
     }
     #autoportrait{
         margin: auto;
-        display: none;
+        width: 220px;
+        height: 250px;
     }
-    #autoportrait2{
-        margin: auto;
-        display: block;
-    }
-
+    
     hr{
         margin-left: -2px;
         margin-right: -2px;
